Done all first top layer of index card in web

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -3,10 +3,78 @@ html(lang="en")
   include ./partials/header
   body
     .card.ba.bw1.b--black-10.b--dashed
-      div.test Name
-      div Wisdom
+      .flrnw.h-50
+        .picture.fln.w-third.bg-cover.bg-top(style="background-image:url('./img/hanzi.jpg')")
+        .fla.flrnw
+          .fla.flcnw
+            .fln.flrnw
+              .name.fln.bg-black.white.caslon.f3.ph2.pv1 Hanzi
+              .fla.flrnw.flrar.pr2
+                .pace.fln.relative.flc.w2.b.f4.mr2 6
+                  .absolute.absolute-0.o-50.bg-contain.bg-center(style="background-image:url('./img/icons/pace.png')")
+                .charisma.fln.relative.flc.w2.b.f4 0
+                  .absolute.absolute-0.o-50.bg-contain.bg-center(style="background-image:url('./img/icons/charisma.png')")
+            .fla.flrnw
+              .fln.flcnw.flcspa.w3
+                .parry.fln.h-50.relative.flrw.flrspa
+                  .absolute.absolute-0.o-50.bg-contain.bg-center(style="background-image:url('./img/icons/parry.png')")
+                  .fln.flc.b.f4.miw-50 6
+                  .fln.flc.b.f4.miw-50 12
+                .toughness.fln.h-50.relative.flrw.flrspa
+                  .absolute.absolute-0.o-50.bg-contain.bg-center(style="background-image:url('./img/icons/toughness.png')")
+                  .fln.flc.b.f4.miw-50 6
+                  .fln.flc.b.f4.miw-50 12
+                  .fln.flc.b.f4.miw-50 16
+                  .fln.flc.b.f4.miw-50 20
+              .fla.flcnw.pt1.pr1.pl1
+                .fight-stats.fln.flcnw.flccv
+                  .fln.flrnw.f6.mb1
+                    .fln.w2.bg-contain.bg-center(style="background-image:url('./img/icons/fighting.png')")
+                    .fln.ph1 D8
+                    .fln.ph1 D6 + D8
+                  .fln.flrnw.f6.mb1
+                    .fln.w2.bg-contain.bg-center(style="background-image:url('./img/icons/shooting.png')")
+                    .fln.ph1 D6
+                    .fln.ph1 2D6
+                  .fln.flrnw.f6.mb1
+                    .fln.w2.bg-contain.bg-center(style="background-image:url('./img/icons/spellcasting.png')")
+                    .fln.ph1 D6
+                    .fln.ph1 2D6
+                .skills.fln.flrw.f7.flral.mta
+                  .fln.mr1.flc
+                    .ph1 Intimidation D8
+                  .fln.mr1.flc
+                    .ph1 Lockpicking D4
+                  .fln.mr1.flc
+                    .ph1 Notice D6
+                  .fln.mr1.flc
+                    .ph1 Taunt D8
+                  .fln.mr1.flc
+                    .ph1 Streetwise D8
+                  .fln.mr1.flc
+                    .ph1 Climbing D10
 
-    .card
-      div Name
-      div Wisdom
+          .stats.fln.flcnw.flcspa
+            .agility.fla.ph1.bg-gold.bt.bl.bb.bw1.b--black-60.br-pill.br--left.flrnw.flc
+              .fln.f7.b.navy.small-caps AG
+              .fln.pl1.near-black D6
+            .smarts.fla.ph1.bg-gold.bt.bl.bb.bw1.b--black-60.br-pill.br--left.flrnw.flc
+              .fln.f7.b.navy.small-caps SM
+              .fln.pl1.near-black D6
+            .spirit.fla.ph1.bg-gold.bt.bl.bb.bw1.b--black-60.br-pill.br--left.flrnw.flc
+              .fln.f7.b.navy.small-caps SP
+              .fln.pl1.near-black D6
+            .strength.fla.ph1.bg-gold.bt.bl.bb.bw1.b--black-60.br-pill.br--left.flrnw.flc
+              .fln.f7.b.navy.small-caps ST
+              .fln.pl1.near-black D6
+            .vigor.fla.ph1.bg-gold.bt.bl.bb.bw1.b--black-60.br-pill.br--left.flrnw.flc
+              .fln.f7.b.navy.small-caps VI
+              .fln.pl1.near-black D6
+      .flrnw.h-50
+        .fln.w-third
+          |roleplay
+        .fla
+          | details
+
+
 
