--- a/src/scss/_tachyons.scss
+++ b/src/scss/_tachyons.scss
@@ -8,7 +8,7 @@
 @import 'vendors/tachyons/media-queries';
 
 //  Debugging
-// @import 'vendors/tachyons/debug-children';
+@import 'vendors/tachyons/debug-children';
 // @import 'vendors/tachyons/debug-grid';
 
 //  Modules
@@ -25,36 +25,36 @@
 @import 'vendors/tachyons/border-widths';
 // @import 'vendors/tachyons/box-shadow';
 // @import 'vendors/tachyons/code';
-// @import 'vendors/tachyons/coordinates';
+@import 'vendors/tachyons/coordinates';
 // @import 'vendors/tachyons/clears';
-// @import 'vendors/tachyons/display';
+@import 'vendors/tachyons/display';
 // @import 'vendors/tachyons/flexbox';
 // @import 'vendors/tachyons/floats';
 // @import 'vendors/tachyons/font-family';
 // @import 'vendors/tachyons/font-style';
-// @import 'vendors/tachyons/font-weight';
+@import 'vendors/tachyons/font-weight';
 // @import 'vendors/tachyons/forms';
-// @import 'vendors/tachyons/heights';
+@import 'vendors/tachyons/heights';
 // @import 'vendors/tachyons/letter-spacing';
 // @import 'vendors/tachyons/line-height';
 // @import 'vendors/tachyons/links';
 // @import 'vendors/tachyons/lists';
 // @import 'vendors/tachyons/max-widths';
-// @import 'vendors/tachyons/widths';
+@import 'vendors/tachyons/widths';
 // @import 'vendors/tachyons/overflow';
-// @import 'vendors/tachyons/position';
-// @import 'vendors/tachyons/opacity';
-// @import 'vendors/tachyons/rotations';
-// @import 'vendors/tachyons/skins';
+@import 'vendors/tachyons/position';
+@import 'vendors/tachyons/opacity';
+@import 'vendors/tachyons/rotations';
+@import 'vendors/tachyons/skins';
 // @import 'vendors/tachyons/skins-pseudo';
-// @import 'vendors/tachyons/spacing';
+@import 'vendors/tachyons/spacing';
 // @import 'vendors/tachyons/negative-margins';
 // @import 'vendors/tachyons/tables';
 // @import 'vendors/tachyons/text-decoration';
 // @import 'vendors/tachyons/text-align';
 // @import 'vendors/tachyons/text-transform';
-// @import 'vendors/tachyons/type-scale';
-// @import 'vendors/tachyons/typography';
+@import 'vendors/tachyons/type-scale';
+@import 'vendors/tachyons/typography';
 // @import 'vendors/tachyons/utilities';
 // @import 'vendors/tachyons/visibility';
 // @import 'vendors/tachyons/white-space';
