--- a/src/scss/_tachyons.scss
+++ b/src/scss/_tachyons.scss
@@ -31,7 +31,7 @@
 // @import 'vendors/tachyons/flexbox';
 // @import 'vendors/tachyons/floats';
 // @import 'vendors/tachyons/font-family';
-// @import 'vendors/tachyons/font-style';
+@import 'vendors/tachyons/font-style';
 @import 'vendors/tachyons/font-weight';
 // @import 'vendors/tachyons/forms';
 @import 'vendors/tachyons/heights';
