--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -2,11 +2,19 @@
 @import '_fonts';
 @import '_utils';
 @import '_custom';
+
+$print-width: 150mm;
+$print-height: 100mm;
 @import '_print';
 
 .card {
-  width: 127mm;
-  height: 76.2mm;
+  width: $print-width;
+  min-width: $print-width;
+  max-width: $print-width;
+  height: $print-height;
+  min-height: $print-height;
+  max-height: $print-height;
 }
+
 
 
