Preparing NPCs Cards to fll

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -1,117 +1,11 @@
+include ./mixins/npc
 doctype html
 html(lang="en")
   include ./partials/header
-  body.relative
-    // .placeholder.card.absolute.top-0.left-0.bg-red.o-10
-    .card.oh
-      .flrnw.h-50
-        .picture.fln.w-third.bg-contain.bg-top(style="background-image:url('./img/rudolf.jpg')")
-        .fla.flrnw
-          .fla.flcnw
-            .fln.flrnw
-              .name.fln.bg-black.white.caslon.f3.ph2.pv1 Rudolf
-              .fla.flrnw.flrar.pr2
-                .pace.fln.relative.flc.w2.b.f4.mr2 4
-                  .absolute.absolute-0.o-50.bg-contain.bg-center(style="background-image:url('./img/icons/pace.png')")
-                .charisma.fln.relative.flc.w2.b.f4 +2
-                  .absolute.absolute-0.o-50.bg-contain.bg-center(style="background-image:url('./img/icons/charisma.png')")
-            .fla.flrnw
-              .fln.flcnw.flcspa.w3
-                .parry.fln.h-50.relative.flrw.flrspa
-                  .absolute.absolute-0.o-50.bg-contain.bg-center(style="background-image:url('./img/icons/parry.png')")
-                  .fln.flc.b.f4.miw-50 8
-                  .fln.flc.b.f4.miw-50 12
-                .toughness.fln.h-50.relative.flrw.flrspa
-                  .absolute.absolute-0.o-50.bg-contain.bg-center(style="background-image:url('./img/icons/toughness.png')")
-                  .fln.flc.b.f4.miw-50 8
-                  .fln.flc.b.f4.miw-50 12
-                  .fln.flc.b.f4.miw-50 16
-              .fla.flcnw.pt1.pr1.pl1
-                .fight-stats.fln.flcnw.flccv
-                  .fln.flrnw.mb1
-                    .fln.w2.bg-contain.bg-center(style="background-image:url('./img/icons/fighting.png')")
-                    .fln.ph1.w2 D10
-                    .fln.ph1 D8 + D10
-                  .fln.flrnw.mb1
-                    .fln.w2.bg-contain.bg-center(style="background-image:url('./img/icons/shooting.png')")
-                    .fln.ph1.w2 D8
-                    .fln.ph1 2D6
-                  // .fln.flrnw.mb1
-                  //   .fln.w2.bg-contain.bg-center(style="background-image:url('./img/icons/spellcasting.png')")
-                  //   .fln.ph1 D6
-                  //   .fln.ph1 2D6
-                .skills.fln.flrw.flral.mta
-                  .fln.mr1.flc
-                    .ph1 Guts D10
-                  .fln.mr1.flc
-                    .ph1 Intimidation D8
-                  .fln.mr1.flc
-                    .ph1 Notice D10
-                  .fln.mr1.flc
-                    .ph1 Riding D8
-                  .fln.mr1.flc
-                    .ph1 Stealth D6
-                  .fln.mr1.flc
-                    .ph1 Persuasion D8
-                  .fln.mr1.flc
-                    .ph1 Knowledge (Battle) D8
-
-          .stats.fln.flcnw.flcspa
-            .agility.fla.ph1.bg-gold.bt.bl.bb.bw1.b--black-60.br-pill.br--left.flrnw.flc
-              .fln.b.navy.small-caps AG
-              .fln.pl1.near-black D8
-            .smarts.fla.ph1.bg-gold.bt.bl.bb.bw1.b--black-60.br-pill.br--left.flrnw.flc
-              .fln.b.navy.small-caps SM
-              .fln.pl1.near-black D8
-            .spirit.fla.ph1.bg-gold.bt.bl.bb.bw1.b--black-60.br-pill.br--left.flrnw.flc
-              .fln.b.navy.small-caps SP
-              .fln.pl1.near-black D8
-            .strength.fla.ph1.bg-gold.bt.bl.bb.bw1.b--black-60.br-pill.br--left.flrnw.flc
-              .fln.b.navy.small-caps ST
-              .fln.pl1.near-black D10
-            .vigor.fla.ph1.bg-gold.bt.bl.bb.bw1.b--black-60.br-pill.br--left.flrnw.flc
-              .fln.b.navy.small-caps VI
-              .fln.pl1.near-black D8
-
-      .h-50.flrnw.f6
-        .fla.flcnw.flcspb.pa2
-          .mb1
-            .b.di Description: 
-            .di Roux. Costaud. Sourcils froncés. Boite un peu.
-          .mb1
-            .b.di Roleplay: 
-            .di Calme. Prudent. Parle peu. Écoute. Décision sans appel.
-          .mb1
-            .b.di Motivation: 
-            .di Protéger ville et habitants. Justice: ce qui sépare les hommes du Chaos.
-          .mb1
-            .b.di Citation: 
-            .di.i "Et vous, vous en pensez quoi ?" "Personne ne sort d'ici". "Trop dangereux". "Écoutons leur explication d'abord."
-        .fln.w-third.flcnw.flcspb.pa2
-          .mb1
-            .b.di Special: 
-            .di D8 check each wave, +1 card/success. +1 Shaken troops. D10 Wild Die when in group.
-          .mb1
-            .b.di Edges: 
-            .di Tactician. Command. Leader of Men.
-          .mb1
-            .b.di Hindrances: 
-            .di Cautious. Lame. Loyal.
-          .mb1
-            .b.di Gear: 
-            .di Long Sword. Bow. Mail Armor.
-
-
-
-// - Leader né
-// - Voix calme et assurée, on l'écoute
-// - A un mot pour tout le monde
-// - Prudent, préfère défendre qu'attaquer
-// - Écoute tout le monde avant de prendre une décision
-// - Protégera sa ville et ses habitants au péril de sa vie
-
-        .fla.w-50
-          | details
-
-
-
+  body
+    .card-list
+      each item in npcs
+        +npc(item)
+      
+      include ./partials/names-male
+      include ./partials/names-female
