--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -6,6 +6,9 @@ html(lang="en")
     .card-list
       each item in npcs
         +npc(item)
+
+      // each item in rules
+      //   +npc(item)
       
       include ./partials/names-male
       include ./partials/names-female
