--- a/src/scss/_tachyons.scss
+++ b/src/scss/_tachyons.scss
@@ -57,7 +57,7 @@
 @import 'vendors/tachyons/typography';
 // @import 'vendors/tachyons/utilities';
 // @import 'vendors/tachyons/visibility';
-// @import 'vendors/tachyons/white-space';
+@import 'vendors/tachyons/white-space';
 // @import 'vendors/tachyons/vertical-align';
 // @import 'vendors/tachyons/hovers';
 // @import 'vendors/tachyons/z-index';
