--- a/src/pug/mixins/npc.pug
+++ b/src/pug/mixins/npc.pug
@@ -7,7 +7,7 @@ mixin npc(data)
         .fla.flrnw
           .fla.flcnw
             .fln.flrnw
-              .name.fln.bg-black.white.caslon.f3.ph2.pv1= data.name
+              .name.fln.bg-black.yellow.caslon.f3.ph2.pv1= data.name
               .fla.flrnw.flrar.pr2
                 .pace.fln.relative.flc.w2.b.f4.mr2= data.stats.pace
                   .absolute.absolute-0.o-50.bg-contain.bg-center(style="background-image:url('./img/icons/pace.png')")
