--- a/src/scss/_utils.scss
+++ b/src/scss/_utils.scss
@@ -96,6 +96,16 @@
 .flrar { justify-content: flex-end; }
 .flral { justify-content: flex-start; }
 // }}}
+// HEIGHTS {{{
+.h-10 { height: 10%; }
+.h-20 { height: 20%; }
+.h-30 { height: 30%; }
+.h-40 { height: 40%; }
+.h-60 { height: 60%; }
+.h-70 { height: 70%; }
+.h-80 { height: 80%; }
+.h-90 { height: 90%; }
+// }}}
 // MARGINS {{{
 .mta { margin-top: auto; }
 .mra { margin-right: auto; }
