Adding some loot

--- a/src/pug/partials/loot-worthless.pug
+++ b/src/pug/partials/loot-worthless.pug
@@ -1,152 +1,149 @@
 .card-wrapper
   .card
-    .name.bg-black.white.caslon.f4.ph2 Loot (Worthless)
+    .name.bg-black.white.caslon.f4.ph2 Loot (Worthless) 1/2
     .flrw.pa1.f7
-      |  01‐05 
-      |  06‐10 
-      |  11‐12 
-      |  13‐14 
-      |  15‐16 
-      |  17‐18 
-      |  19‐20 
-      |  21‐22 
-      |  23‐24 
-      |  25‐26 
-      |  27‐28 
-      |  29‐30 
-      |  31‐32 
-      |  33‐34 
-      |  35‐36 
-      |  37‐38 
-      |  39‐40 
-      |  41‐42 
-      |  43‐44 
-      |  45‐46 
-      |  47‐48 
-      |  49‐50 
-      |  51‐52 
-      |  53‐54 
-      |   
-      |  A fist‐sized grey rock, smooth and round, perfect 
-      |  for skipping across a lake, though not much else. 
-      |  A  piece  of  string  slightly  too  short  to  make  an 
-      |  effective bootlace, even for a goblin. 
-      |  A  dried‐out  dead  snake  wrapped  carefully 
-      |  around a gnarled branch. 
-      |  A crude goblin effigy consisting of a lump of coal 
-      |  with  two  buttons  glued  on  for  eyes  and  floppy 
-      |  green leaves attached as ears. 
-      |  A  single  copper  coin,  melted  almost  beyond 
-      |  recognition. 
-      |  A  crumpled  piece  of  paper  with  a  song  written 
-      |  on  it  –  currently  it  is  wrapped  around  a  fish 
-      |  skeleton. 
-      |  A well‐worn copper key, its teeth have obviously 
-      |  been  crudely  filed  to  the  point  where  it  will 
-      |  never fit its original lock. 
-      |  A small squash has had a leering face carved into 
-      |  it. 
-      |  A  disturbingly  soiled  handkerchief,  the  colours 
-      |  splattered  on  it  seem  too  vibrant  to  have  come 
-      |  from a living person. 
-      |  A  shred  of  bright  blue  fabric,  splattered  with  a 
-      |  dark crimson liquid. 
-      |  A  dull  table  knife  that  has  been  bent  in  three 
-      |  different  places,  as  if  it  crumpled  against  thick 
-      |  armour. 
-      |  The left arm and head of a doll; one of its button 
-      |  eyes is missing. 
-      |  A  potato  serves  as  a  pin  cushion  to  collect  bent 
-      |  pins and needles. 
-      |  A  rolled  up  piece  of  parchment  is  a  half‐scribed 
-      |  scroll of fireball, though it is completely inert. 
-      |  A folded up napkin contains shards of chalk. 
-      |  A  collection  of  rusted,  completely  imbalanced 
-      |  arrowheads,  each  with  a  letter  of  the  alphabet 
-      |  scraped into it. 
-      |  A half‐eaten left shoe soaked in brine. 
-      |  A severed finger, bearing a tan‐line where a ring 
-      |  has been recently removed. 
-      |  A  ripped  dog  collar,  bearing  a  wooden  tag  with 
-      |  the name Bruiser clearly engraved on it. 
-      |  A  tuft  of  red  hair,  seemingly  sheared  from  the 
-      |  foot of a halfling. 
-      |  A  small  piece  of  reflective  glass,  likely  broken 
-      |  from a larger mirror. 
-      |  A  piece  of  fabric  that  may  have  once  been  part 
-      |  of  a  tapestry,  but  now  is  simply  full  of  pinholes 
-      |  where thread would once have been stitched. 
-      |  55‐56 
-      |  57‐58 
-      |  59‐60 
-      |  61‐62 
-      |  63‐64 
-      |  65‐66 
-      |  67‐68 
-      |  69‐70 
-      |  71‐72 
-      |  73‐74 
-      |  75‐76 
-      |  77‐78 
-      |  79‐80 
-      |  81‐82 
-      |  83‐84 
-      |  85‐86 
-      |  87‐88 
-      |  89‐90 
-      |  91‐92 
-      |  93‐94 
-      |  95‐99 
-      |  100 
-      |   
-      |  An  impossibly  tangled  ball  of  multi‐coloured 
-      |  thread. 
-      |  A small red brick, still bearing flecks of off‐white 
-      |  mortar. 
-      |  Teeth pulled from a shark or similar carnivorous 
-      |  creature. 
-      |  A  leather  patch,  seemingly  torn  from  the  elbow 
-      |  of a well‐worn jacket. 
-      |  The  frame  from  a  pair  of  reading  glasses,  its 
-      |  lenses long since lost. 
-      |  A  dingy  grey  feather  roughly  three  inches  long, 
-      |  stuck into a rotten plum. 
-      |  A  collection  of  stinkbug  carapaces  with  their 
-      |  innards sucked out. 
-      |  A handful of spent tindertwigs, their burnt shafts 
-      |  tell a grim tale of arson past. 
-      |  A well‐gnawed wooden skewer smells like it was 
-      |  likely once stuck through a piece of rancid meat. 
-      |  A  small  jewellery  box  contains  a  relatively  fresh 
-      |  humanoid eye. 
-      |  Two  strips  of  leather  support  a  small  triangle  of 
-      |  filthy cloth, the implied purpose of which makes 
-      |  even stalwart adventurers shudder. 
-      |  A small stuffed mouse, likely a cat’s toy. It smells 
-      |  of some strange herb. 
-      |  A  large,  well‐groomed  and  heavily  waxed 
-      |  moustache, some scraps of skin  still cling to  the 
-      |  back. 
-      |  This  battered  clay  pot  has  had  the  top  cleanly 
-      |  removed, while the bottom is rotting away. 
-      |  A  tangle  of  copper  wire,  wrapped  around  a 
-      |  branch torn from a birch tree. 
-      |  A  small  chunk  of  soapstone,  carved  into  the 
-      |  likeness of a finger. 
-      |  A piece of sculpted wood, so badly burnt only a 
-      |  faint pattern remains. 
-      |  A  crudely  drawn  map,  consisting  of  a  single 
-      |  dotted  line  leading  to  an  “X”  (though  no  other 
-      |  reference points are given). 
-      |  A heavily oxidized brass nail, the deep green of a 
-      |  pine needle. 
-      |  A  torn  piece  of  paper  on  which  is  written  a 
-      |  partial recipe for apple pie. 
-      |  A small grey feather, most likely from a pigeon. 
-      |  A  collection  of  fins  ripped  from  fish  have  been 
-      |  threaded together to make a bracelet. 
-      |  Roll  twice  on  this  table,  the  items  are  tangled 
-      |  together. 
-      |  Roll  thrice  on  this  table,  ignoring  duplicate 
-      |  results. Grime and fluff cover the items.
+      .flrw
+        .fla.flrnw
+          .fln 01‐05 
+          .fla.pl1 A fist‐sized grey rock, smooth and round, perfect for skipping across a lake, though not much else. 
+        .fla.flrnw
+          .fln 06‐10 
+          .fla.pl1 A piece of string slightly too short to make an effective bootlace, even for a goblin. 
+        .fla.flrnw
+          .fln 11‐12 
+          .fla.pl1 A dried‐out dead snake wrapped carefully around a gnarled branch. 
+        .fla.flrnw
+          .fln 13‐14 
+          .fla.pl1 A crude goblin effigy consisting of a lump of coal with two buttons glued on for eyes and floppy green leaves attached as ears. 
+        .fla.flrnw
+          .fln 15‐16 
+          .fla.pl1 A single copper coin, melted almost beyond recognition. 
+        .fla.flrnw
+          .fln 17‐18 
+          .fla.pl1 A crumpled piece of paper with a song written on it – currently it is wrapped around a fish skeleton. 
+        .fla.flrnw
+          .fln 19‐20 
+          .fla.pl1 A well‐worn copper key, its teeth have obviously been crudely filed to the point where it will never fit its original lock. 
+        .fla.flrnw
+          .fln 21‐22 
+          .fla.pl1 A small squash has had a leering face carved into it. 
+        .fla.flrnw
+          .fln 23‐24 
+          .fla.pl1 A disturbingly soiled handkerchief, the colours splattered on it seem too vibrant to have come from a living person. 
+        .fla.flrnw
+          .fln 25‐26 
+          .fla.pl1 A shred of bright blue fabric, splattered with a dark crimson liquid. 
+        .fla.flrnw
+          .fln 27‐28 
+          .fla.pl1 A dull table knife that has been bent in three different places, as if it crumpled against thick armour. 
+        .fla.flrnw
+          .fln 29‐30 
+          .fla.pl1 The left arm and head of a doll; one of its button eyes is missing. 
+        .fla.flrnw
+          .fln 31‐32 
+          .fla.pl1 A potato serves as a pin cushion to collect bent pins and needles. 
+        .fla.flrnw
+          .fln 33‐34 
+          .fla.pl1 A rolled up piece of parchment is a half‐scribed scroll of fireball, though it is completely inert. 
+        .fla.flrnw
+          .fln 35‐36 
+          .fla.pl1 A folded up napkin contains shards of chalk. 
+        .fla.flrnw
+          .fln 37‐38 
+          .fla.pl1 A collection of rusted, completely imbalanced arrowheads, each with a letter of the alphabet scraped into it. 
+        .fla.flrnw
+          .fln 39‐40 
+          .fla.pl1 A half‐eaten left shoe soaked in brine. 
+        .fla.flrnw
+          .fln 41‐42 
+          .fla.pl1 A severed finger, bearing a tan‐line where a ring has been recently removed. 
+        .fla.flrnw
+          .fln 43‐44 
+          .fla.pl1 A ripped dog collar, bearing a wooden tag with the name Bruiser clearly engraved on it. 
+        .fla.flrnw
+          .fln 45‐46 
+          .fla.pl1 A tuft of red hair, seemingly sheared from the foot of a halfling. 
+        .fla.flrnw
+          .fln 47‐48 
+          .fla.pl1 A small piece of reflective glass, likely broken from a larger mirror. 
+        .fla.flrnw
+          .fln 49‐50 
+          .fla.pl1 A piece of fabric that may have once been part of a tapestry, but now is simply full of pinholes where thread would once have been stitched. 
 
+.card-wrapper
+  .card
+    .name.bg-black.white.caslon.f4.ph2 Loot (Worthless) 2/2
+    .flrw.pa1.f7
+      .flrw
+        .fla.flrnw
+          .fln 51‐52 
+          .fla.pl1 An impossibly tangled ball of multi‐coloured thread.  
+        .fla.flrnw
+          .fln 53‐54 
+          .fla.pl1 A small red brick, still bearing flecks of off‐white mortar.  
+        .fla.flrnw
+          .fln 55‐56 
+          .fla.pl1 Teeth pulled from a shark or similar carnivorous creature.  
+        .fla.flrnw
+          .fln 57‐58 
+          .fla.pl1 A leather patch, seemingly torn from the elbow of a well‐worn jacket.  
+        .fla.flrnw
+          .fln 59‐60 
+          .fla.pl1 The frame from a pair of reading glasses, its lenses long since lost.  
+        .fla.flrnw
+          .fln 61‐62 
+          .fla.pl1 A dingy grey feather roughly three inches long, stuck into a rotten plum.  
+        .fla.flrnw
+          .fln 63‐64 
+          .fla.pl1 A collection of stinkbug carapaces with their innards sucked out.  
+        .fla.flrnw
+          .fln 65‐66 
+          .fla.pl1 A handful of spent tindertwigs, their burnt shafts tell a grim tale of arson past.  
+        .fla.flrnw
+          .fln 67‐68 
+          .fla.pl1 A well‐gnawed wooden skewer smells like it was likely once stuck through a piece of rancid meat.  
+        .fla.flrnw
+          .fln 69‐70 
+          .fla.pl1 A small jewellery box contains a relatively fresh humanoid eye.  
+        .fla.flrnw
+          .fln 71‐72 
+          .fla.pl1 Two strips of leather support a small triangle of filthy cloth, the implied purpose of which makes even stalwart adventurers shudder.  
+        .fla.flrnw
+          .fln 73‐74 
+          .fla.pl1 A small stuffed mouse, likely a cat’s toy. It smells of some strange herb.  
+        .fla.flrnw
+          .fln 75‐76 
+          .fla.pl1 A large, well‐groomed and heavily waxed moustache, some scraps of skin still cling to the back.  
+        .fla.flrnw
+          .fln 77‐78 
+          .fla.pl1 This battered clay pot has had the top cleanly removed, while the bottom is rotting away.  
+        .fla.flrnw
+          .fln 79‐80 
+          .fla.pl1 A tangle of copper wire, wrapped around a branch torn from a birch tree.  
+        .fla.flrnw
+          .fln 81‐82 
+          .fla.pl1 A small chunk of soapstone, carved into the likeness of a finger.  
+        .fla.flrnw
+          .fln 83‐84 
+          .fla.pl1 A piece of sculpted wood, so badly burnt only a faint pattern remains.  
+        .fla.flrnw
+          .fln 85‐86 
+          .fla.pl1 A crudely drawn map, consisting of a single dotted line leading to an “X” (though no other reference points are given).  
+        .fla.flrnw
+          .fln 87‐88 
+          .fla.pl1 A heavily oxidized brass nail, the deep green of a pine needle.  
+        .fla.flrnw
+          .fln 89‐90 
+          .fla.pl1 A torn piece of paper on which is written a partial recipe for apple pie.  
+        .fla.flrnw
+          .fln 91‐92 
+          .fla.pl1 A small grey feather, most likely from a pigeon.  
+        .fla.flrnw
+          .fln 93‐94 
+          .fla.pl1 A collection of fins ripped from fish have been threaded together to make a bracelet.  
+        .fla.flrnw
+          .fln 95‐99 
+          .fla.pl1 Roll twice on this table, the items are tangled together.  
+        .fla.flrnw
+          .fln 100 
+          .fla.pl1 Roll thrice on this table, ignoring duplicate results. Grime and fluff cover the items.
