--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -35,6 +35,7 @@ html(lang="en")
 
     +title('Tables')
     .card-list
+      include ./partials/ranges
       include ./partials/names-male
       include ./partials/names-female
       include ./partials/loot-worthless
