--- a/src/scss/_tachyons.scss
+++ b/src/scss/_tachyons.scss
@@ -51,7 +51,7 @@
 // @import 'vendors/tachyons/negative-margins';
 // @import 'vendors/tachyons/tables';
 // @import 'vendors/tachyons/text-decoration';
-// @import 'vendors/tachyons/text-align';
+@import 'vendors/tachyons/text-align';
 // @import 'vendors/tachyons/text-transform';
 @import 'vendors/tachyons/type-scale';
 @import 'vendors/tachyons/typography';
